--- a/public/index.html
+++ b/public/index.html
@@ -31,14 +31,22 @@
 
         <div class="swiper swiper-container">
             <div class="swiper-wrapper">
-                <!-- Swiper slides with 3D model containers -->
+                <!-- Swiper slides with 3D model containers and item info -->
                 <div class="swiper-slide">
-                    <div class="model-preview" data-model="Bjorn_T_Shirt_Design_1121162324"></div>
+                    <div class="item-info">
+                        <div class="item-name">Bjorn T-Shirt</div>
+                        <div class="model-preview" data-model="Bjorn_T_Shirt_Design_1121162324"></div>
+                        <div class="item-price">$119.99</div>
+                    </div>
                 </div>
                 <div class="swiper-slide">
-                    <div class="model-preview" data-model="BJORN_Vibrance_Collec_1121162927"></div>
+                    <div class="item-info">
+                        <div class="item-name">Bjorn Vibrance Collection</div>
+                        <div class="model-preview" data-model="BJORN_Vibrance_Collec_1121162927"></div>
+                        <div class="item-price">$139.99</div>
+                    </div>
                 </div>
-                <!-- Add more slides if needed -->
+                <!-- Add more slides if needed, following the same structure -->
             </div>
         </div>
     </div>
